[package]
name = "vfio-ioctls"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors", "Liu Jiang <gerry@linux.alibaba.com>"]
description = "Safe wrappers over VFIO ioctls"
keywords = ["vfio"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

[dependencies]
byteorder = ">=1.2.1"
log = "0.4"
kvm-ioctls = { git = "https://github.com/wan-nyan-wan/kvm-ioctls", branch = "for-vhost-user-vsock" }
kvm-bindings = { git = "https://github.com/cloud-hypervisor/kvm-bindings", branch = "ch-v0.4.0", features = ["with-serde", "fam-wrappers"] }
vfio-bindings = "~0"
vm-memory = { version = "~0", features = ["backend-mmap"] }
vmm-sys-util = "~0"
